--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ a {
   font-style: normal;
   color: var(--main-font-color);
   text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 a:hover {
   font-style: normal;
@@ -28,6 +29,7 @@ a:hover {
 }
 a:focus {
   color: var(--main-blue-color);
+
 }
 ul {
   list-style: none;
@@ -45,6 +47,10 @@ p,
 ul,
 li {
   margin: 0;
+}
+button{
+  padding: 0;
+  border: 0;
 }
 .header-border {
   border-bottom: 1px solid var(--section-light-bg);
@@ -106,9 +112,27 @@ li {
   font-size: 14px;
   line-height: 1.15;
   letter-spacing: 0.02em;
-  padding: 32px 0;
+  padding-top: 32px;
   color: var(--main-font-color);
+    transition: color 250ms 
+    cubic-bezier(0.4, 0, 0.2, 1);
 }
+.nav-link::after {
+  display: block;
+  opacity: 0;
+  width: 100%;
+  height: 4px;
+  background-color: var(--main-blue-color);
+  margin-top: 28px;
+content: '';
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border-radius: 2px;
+}
+.nav-link:hover::after{
+opacity: 1;
+
+}
+
 
 .address-link-icon-style {
   fill: var(--text-color);
@@ -128,6 +152,8 @@ li {
   line-height: 1.15;
   letter-spacing: 0.02em;
   color: var(--address-color);
+      transition: color 250ms 
+      cubic-bezier(0.4, 0, 0.2, 1);
 }
 .adress-list {
   gap: 50px;
@@ -139,6 +165,7 @@ li {
 }
 .address-link:hover .address-link-icon-style {
   fill: var(--main-blue-color);
+
 }
 .address-link:focus {
   color: var(--main-blue-color);
@@ -183,6 +210,8 @@ li {
   padding: 10px 32px;
   border-radius: 4px;
   border: none;
+  transition: background-color 250ms
+  cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-batton:hover {
   background-color: var(--blue-batton-hover);
@@ -190,7 +219,56 @@ li {
 .hero-batton:focus {
   background-color: var(--blue-batton-hover);
 }
+/* Modal */
 
+.backdrop{
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+z-index: 2;
+background-color: rgba(0, 0, 0, 0.5)
+}
+.backdrop.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+.modal{
+  position: absolute;
+  width: 528px;
+  height: 581px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--white-color);
+  box-shadow:
+      0px 1px 3px rgba(0, 0, 0, 0.12),
+      0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+
+}
+.modal-close-btn{
+     position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 10px;
+    right: 10px;
+    width: 30px;
+    height: 30px;
+    z-index: 3;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    background-color: var(--white-color);
+}
+.modal-close-btn-style{
+    width: 18px;
+      height: 18px;
+      background-color: var(--white-color);
+}
 /*features-section*/
 
 .features-icon {
@@ -310,9 +388,12 @@ li {
   justify-content: center;
   background-color: var(--white-color);
   border-radius: 50%;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 .social-link:hover {
   background-color: var(--main-blue-color);
+        transition: background-color 250ms,fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link:focus {
   background-color: var(--main-blue-color);
@@ -320,6 +401,8 @@ li {
 }
 .social-link:hover .social-icon {
   fill: var(--white-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 .social-link:focus .social-icon {
   fill: var(--white-color);
@@ -329,6 +412,7 @@ li {
   width: 20px;
   height: 20px;
   fill: var(--text-color);
+  
 }
 
 /*regular-customers*/
