--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,6 @@ a {
   font-style: normal;
   color: var(--main-font-color);
   text-decoration: none;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 a:hover {
   font-style: normal;
@@ -29,7 +28,6 @@ a:hover {
 }
 a:focus {
   color: var(--main-blue-color);
-
 }
 ul {
   list-style: none;
@@ -47,10 +45,6 @@ p,
 ul,
 li {
   margin: 0;
-}
-button{
-  padding: 0;
-  border: 0;
 }
 .header-border {
   border-bottom: 1px solid var(--section-light-bg);
@@ -114,8 +108,8 @@ button{
   letter-spacing: 0.02em;
   padding-top: 32px;
   color: var(--main-font-color);
-    transition: color 250ms 
-    cubic-bezier(0.4, 0, 0.2, 1);
+      transition: color 250ms 
+      cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-link::after {
   display: block;
@@ -124,15 +118,15 @@ button{
   height: 4px;
   background-color: var(--main-blue-color);
   margin-top: 28px;
-content: '';
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    border-radius: 2px;
-}
-.nav-link:hover::after{
-opacity: 1;
-
+  content: '';
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border-radius: 2px;
 }
 
+.nav-link:hover::after {
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .address-link-icon-style {
   fill: var(--text-color);
@@ -152,20 +146,27 @@ opacity: 1;
   line-height: 1.15;
   letter-spacing: 0.02em;
   color: var(--address-color);
-      transition: color 250ms 
-      cubic-bezier(0.4, 0, 0.2, 1);
-}
+        transition: color 250ms 
+        cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
 .adress-list {
   gap: 50px;
   margin-left: auto;
 }
 .address-link:hover {
   color: var(--main-blue-color);
-  margin-left: 0;
+
+}
+.address-link:hover::after {
+  color: var(--address-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-link:hover .address-link-icon-style {
   fill: var(--main-blue-color);
-
+}
+.address-link:focus .address-link-icon-style {
+  fill: var(--main-blue-color);
 }
 .address-link:focus {
   color: var(--main-blue-color);
@@ -177,16 +178,20 @@ opacity: 1;
 /*hero-section*/
 
 .hero-style {
+  display: flex;
+  max-width: 1600px;
   background-color: var(--section-dark-bg);
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
-    ),
-    url(../images/hero.jpg);
+    ),    url(../images/hero.jpg);
   padding: 200px 0;
   background-repeat: no-repeat;
   background-position: 50% 50%;
   text-align: center;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
 }
 .hero-text {
   font-weight: 900;
@@ -210,32 +215,36 @@ opacity: 1;
   padding: 10px 32px;
   border-radius: 4px;
   border: none;
-  transition: background-color 250ms
+  transition: background-color 250ms 
   cubic-bezier(0.4, 0, 0.2, 1);
-}
+  }
+
 .hero-batton:hover {
   background-color: var(--blue-batton-hover);
+    transition: background-color 250ms, cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-batton:focus {
   background-color: var(--blue-batton-hover);
 }
+
 /* Modal */
 
-.backdrop{
-position: fixed;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-z-index: 2;
-background-color: rgba(0, 0, 0, 0.5)
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.5)
 }
 .backdrop.is-hidden {
   visibility: hidden;
   opacity: 0;
   pointer-events: none;
 }
-.modal{
+
+.modal {
   position: absolute;
   width: 528px;
   height: 581px;
@@ -244,42 +253,47 @@ background-color: rgba(0, 0, 0, 0.5)
   transform: translate(-50%, -50%);
   background-color: var(--white-color);
   box-shadow:
-      0px 1px 3px rgba(0, 0, 0, 0.12),
-      0px 1px 1px rgba(0, 0, 0, 0.14),
-      0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
+    0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
 
 }
-.modal-close-btn{
-     position: fixed;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    top: 10px;
-    right: 10px;
-    width: 30px;
-    height: 30px;
-    z-index: 3;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
-    background-color: var(--white-color);
+
+.modal-close-btn {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 10px;
+  right: 10px;
+  width: 30px;
+  height: 30px;
+  z-index: 3;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: var(--white-color);
 }
-.modal-close-btn-style{
-    width: 18px;
-      height: 18px;
-      background-color: var(--white-color);
+
+.modal-close-btn-style {
+  width: 18px;
+  height: 18px;
+  background-color: var(--white-color);
 }
 /*features-section*/
 
 .features-icon {
   display: flex;
+  width: 270px;
+  height: 120px;
   background-color: var(--section-light-bg);
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+  justify-content: center;
+  align-items: center;
 }
 .feature-icon-style {
   width: 70px;
   height: 70px;
-  margin: 25px auto;
 }
 
 .features-section {
@@ -331,7 +345,9 @@ background-color: rgba(0, 0, 0, 0.5)
   padding: 94px 0;
 }
 .our-team-background {
+  max-width: 1600px;
   background-color: var(--section-light-bg);
+  margin: 0 auto;
 }
 .our-team-container {
   width: 1200px;
@@ -372,13 +388,11 @@ background-color: rgba(0, 0, 0, 0.5)
   letter-spacing: 0.03em;
 }
 
-.icons-list {
-  padding-top: 16px;
-}
 .social-list {
   display: flex;
   justify-content: center;
   gap: 10px;
+    margin-top: 16px;
 }
 .social-link {
   width: 44px;
@@ -388,12 +402,11 @@ background-color: rgba(0, 0, 0, 0.5)
   justify-content: center;
   background-color: var(--white-color);
   border-radius: 50%;
-        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link:hover {
   background-color: var(--main-blue-color);
-        transition: background-color 250ms,fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: background-color 250ms, fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link:focus {
   background-color: var(--main-blue-color);
@@ -401,8 +414,7 @@ background-color: rgba(0, 0, 0, 0.5)
 }
 .social-link:hover .social-icon {
   fill: var(--white-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link:focus .social-icon {
   fill: var(--white-color);
@@ -411,8 +423,7 @@ background-color: rgba(0, 0, 0, 0.5)
 .social-icon {
   width: 20px;
   height: 20px;
-  fill: var(--text-color);
-  
+  fill: var(--customers-border);
 }
 
 /*regular-customers*/
@@ -425,7 +436,7 @@ background-color: rgba(0, 0, 0, 0.5)
   display: flex;
   justify-content: center;
   gap: 30px;
-  padding-top: 50px;
+  margin-top: 50px;
 }
 .customers-list-ithem {
 }
@@ -445,9 +456,11 @@ background-color: rgba(0, 0, 0, 0.5)
 }
 .customer-link:hover {
   border-color: var(--main-blue-color);
+    transition: border-color 250ms, cubic-bezier(0.4, 0, 0.2, 1);
 }
 .customer-link:hover .customer-logo {
   fill: var(--main-blue-color);
+    transition: fill 250ms, cubic-bezier(0.4, 0, 0.2, 1);
 }
 .customer-link:focus {
   border-color: var(--main-blue-color);
@@ -492,6 +505,7 @@ background-color: rgba(0, 0, 0, 0.5)
 }
 .address-link-footer:hover {
   color: var(--main-blue-color);
+    transition: color 250ms, cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-address-style {
   margin-top: 20px;
@@ -511,14 +525,14 @@ background-color: rgba(0, 0, 0, 0.5)
 .footer-icons-list {
   margin-left: 70px;
 }
-.footer-h4-style {
+.footer-b-style {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--white-color);
-  padding-bottom: 20px;
+  margin-bottom: 20px;
 }
 .footer-social-link {
   width: 44px;
@@ -536,6 +550,7 @@ background-color: rgba(0, 0, 0, 0.5)
 }
 .footer-social-link:hover {
   background-color: var(--main-blue-color);
+    transition: background-color 250ms, cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-social-link:focus {
   background-color: var(--main-blue-color);
@@ -543,9 +558,12 @@ background-color: rgba(0, 0, 0, 0.5)
 }
 .footer-social-link:hover .social-icon {
   fill: var(--white-color);
+c
 }
+
 .footer-social-link:focus .social-icon {
   fill: var(--white-color);
+    transition: fill 250ms, cubic-bezier(0.4, 0, 0.2, 1);
   outline: none;
 }
 
@@ -578,6 +596,7 @@ background-color: rgba(0, 0, 0, 0.5)
   background-color: var(--main-blue-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
+    transition: background-color 250ms, fill 250ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-style:focus {
   color: var(--white-color);
@@ -605,6 +624,7 @@ background-color: rgba(0, 0, 0, 0.5)
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--main-font-color);
+
 }
 .p-portfolio {
   font-size: 16px;
@@ -612,32 +632,35 @@ background-color: rgba(0, 0, 0, 0.5)
   letter-spacing: 0.03em;
   color: var(--address-color);
   margin-top: 4px;
-}
-.portfolio-card-flex {
+}.portfolio-card-flex {
   display: flex;
   flex-wrap: wrap;
   margin-top: 50px;
   gap: 30px;
 }
+
 .portfolio-card {
   width: 370px;
   background-color: var(--white-color);
 }
+
 .portfolio-card-img-size {
   width: 100%;
 }
-.portfolio-card:hover {
-  box-shadow: 
-  0px 3px 1px rgba(0, 0, 0, 0.1), 
-  0px 1px 2px rgba(0, 0, 0, 0.08),
-  0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-.portfolio-card:focus {
-  box-shadow: 
-  0px 3px 1px rgba(0, 0, 0, 0.1),
-   0px 1px 2px rgba(0, 0, 0, 0.08),
+
+.portfolio-card:hover .card-description {
+  box-shadow:
+    0px 3px 1px rgba(0, 0, 0, 0.1),
+    0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-    outline: none;
+}
+
+.portfolio-card:focus .card-description {
+  box-shadow:
+    0px 3px 1px rgba(0, 0, 0, 0.1),
+    0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  outline: none;
 }
 
 .card-description {
@@ -646,3 +669,78 @@ background-color: rgba(0, 0, 0, 0.5)
   border-right: 1px solid var(--card-border);
   border-bottom: 1px solid var(--card-border);
 }
+/*
+.portfolio-card-flex {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 50px;
+  gap: 30px;
+}
+
+        .portfolio-card-shadow {
+          position: relative;
+            overflow: hidden;
+          background-color: var(--white-color);    
+        }
+
+            .site-description  {
+              position: absolute;
+              z-index: 0;
+              height: 72%;
+              top: 0;
+              left: 0;
+              width: 370px;
+              background-color: rgba(33, 150, 243, 0.9);
+              padding: 63px 24px;
+              transform: translateY(100%);
+              color: var(--white-color);
+            
+              font-size: 18px;
+              line-height: 1.56;
+              letter-spacing: 0.03em;
+            overflow: auto;
+            transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+          }
+          .portfolio-card:hover .site-description{
+            transform: translateY(0);
+           
+          }
+.card-description {
+
+  background-color: var(--white-color);
+  padding: 24px 20px;
+  border-left: 1px solid var(--card-border);
+  border-right: 1px solid var(--card-border);
+  border-bottom: 1px solid var(--card-border);
+}
+.portfolio-card-shadow:hover {
+  box-shadow:
+    0px 3px 1px rgba(0, 0, 0, 0.1),
+    0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  transition: background-color 250ms,
+    fill 250ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+.portfolio-card-img-size {
+width: 100%;
+}
+.portfolio-card-shadow{
+  
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.12), 0px 0px 0px rgba(0, 0, 0, 0.06),
+        0px 0px 0px rgba(0, 0, 0, 0.16);
+      transition-property: box-shadow;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-card:focus .card-description {
+  box-shadow: 
+  0px 3px 1px rgba(0, 0, 0, 0.1),
+  0px 1px 2px rgba(0, 0, 0, 0.08),
+  0px 2px 2px rgba(0, 0, 0, 0.12);
+  outline: none;
+}
+
+
+*/
