--- a/css/styles.css
+++ b/css/styles.css
@@ -470,7 +470,7 @@ transition: background-color 250ms, fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: var(--main-blue-color);
 }
 
-/*footer*/
+/*__________________________________________________footer*/
 
 .footer-fon {
   background-color: var(--section-dark-bg);
@@ -558,7 +558,6 @@ transition: background-color 250ms, fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-social-link:hover .social-icon {
   fill: var(--white-color);
-c
 }
 
 .footer-social-link:focus .social-icon {
@@ -567,7 +566,7 @@ c
   outline: none;
 }
 
-/*page-portfolio*/
+/*_______________________________________page-portfolio*/
 .portfolio-section {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -664,48 +663,6 @@ c
 }
 
 .card-description {
-  padding: 24px 20px;
-  border-left: 1px solid var(--card-border);
-  border-right: 1px solid var(--card-border);
-  border-bottom: 1px solid var(--card-border);
-}
-/*
-.portfolio-card-flex {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 50px;
-  gap: 30px;
-}
-
-        .portfolio-card-shadow {
-          position: relative;
-            overflow: hidden;
-          background-color: var(--white-color);    
-        }
-
-            .site-description  {
-              position: absolute;
-              z-index: 0;
-              height: 72%;
-              top: 0;
-              left: 0;
-              width: 370px;
-              background-color: rgba(33, 150, 243, 0.9);
-              padding: 63px 24px;
-              transform: translateY(100%);
-              color: var(--white-color);
-            
-              font-size: 18px;
-              line-height: 1.56;
-              letter-spacing: 0.03em;
-            overflow: auto;
-            transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-          }
-          .portfolio-card:hover .site-description{
-            transform: translateY(0);
-           
-          }
-.card-description {
 
   background-color: var(--white-color);
   padding: 24px 20px;
@@ -713,34 +670,31 @@ c
   border-right: 1px solid var(--card-border);
   border-bottom: 1px solid var(--card-border);
 }
-.portfolio-card-shadow:hover {
-  box-shadow:
-    0px 3px 1px rgba(0, 0, 0, 0.1),
-    0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  transition: background-color 250ms,
-    fill 250ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
-.portfolio-card-img-size {
-width: 100%;
-}
-.portfolio-card-shadow{
-  
-    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.12), 0px 0px 0px rgba(0, 0, 0, 0.06),
-        0px 0px 0px rgba(0, 0, 0, 0.16);
-      transition-property: box-shadow;
-      transition-duration: 250ms;
-      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+.porfolio-description{
+            position: relative;
+            overflow: hidden;
 }
 
-.portfolio-card:focus .card-description {
-  box-shadow: 
-  0px 3px 1px rgba(0, 0, 0, 0.1),
-  0px 1px 2px rgba(0, 0, 0, 0.08),
-  0px 2px 2px rgba(0, 0, 0, 0.12);
-  outline: none;
-}
+          .site-description {
+            position: absolute;
+            z-index: 0;
+            height: 100%;
+            top: 0;
+            left: 0;
+            width: 370px;
+            background-color: rgba(33, 150, 243, 0.9);
+            padding: 63px 24px;
+            transform: translateY(100%);
+            color: var(--white-color);
+            font-size: 18px;
+            line-height: 1.56;
+            letter-spacing: 0.03em;
+            transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+          }
+            .portfolio-card:focus .site-description{
+              transform: translateY(0);
+            }
+            .portfolio-card:hover .site-description {
+              transform: translateY(0);              
+            }
 
-
-*/
