--- a/css/styles.css
+++ b/css/styles.css
@@ -215,7 +215,7 @@ li {
   padding: 10px 32px;
   border-radius: 4px;
   border: none;
-  transition: background-color 250ms 
+  transition: background-color 250ms, 
   cubic-bezier(0.4, 0, 0.2, 1);
   }
 
@@ -236,7 +236,9 @@ li {
   width: 100%;
   height: 100%;
   z-index: 2;
-  background-color: rgba(0, 0, 0, 0.5)
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: opacity 250ms, visibility 250ms, cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 .backdrop.is-hidden {
   visibility: hidden;
@@ -330,7 +332,7 @@ li {
   width: 270px;
 }
 
-/*What do we do*/
+/*_________________________What do we do*/
 .wdwd-retreat {
   padding-bottom: 94px;
 }
@@ -340,7 +342,31 @@ li {
   gap: 30px;
   justify-content: center;
 }
-/*our team*/
+.wdwd-position{
+  position: relative;
+}
+.wdwd-description{
+    position: absolute;
+      z-index: 1;
+      height: 70px;
+      bottom: 0%;
+      left: 0;
+      width: 370px;
+      background: rgba(47, 48, 58, 0.8);
+      padding-top: 27px;
+      padding-bottom: 27px;
+
+      color: var(--white-color);
+      transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      text-align: center;
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 1.14;
+      letter-spacing: 0.03em;
+      text-transform: uppercase;
+    }
+
+/*_____________________________our team*/
 .our-team-retreat {
   padding: 94px 0;
 }
@@ -438,8 +464,7 @@ transition: background-color 250ms, fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   gap: 30px;
   margin-top: 50px;
 }
-.customers-list-ithem {
-}
+
 .customer-link {
   width: 170px;
   height: 92px;
