--- a/css/styles.css
+++ b/css/styles.css
@@ -139,14 +139,13 @@ li {
   border-radius: 2px;
 }
 
-.nav-link:hover::after {
+/*.nav-link:hover::after {
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+}*/
 
 .address-link-icon-style {
-  fill: var(--text-color);
-  width: 16px;
+   width: 16px;
   height: 16px;
   margin: auto 10px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -164,8 +163,7 @@ li {
   line-height: 1.15;
   letter-spacing: 0.02em;
   color: var(--address-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .adress-list {
@@ -486,9 +484,7 @@ li {
   justify-content: center;
   background-color: var(--white-color);
   border-radius: 50%;
-  transition:
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover {
@@ -538,6 +534,7 @@ li {
   justify-content: center;
   border: 1px solid var(--customers-border);
   border-radius: 4px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1)ж
 
 }
 
@@ -545,9 +542,7 @@ li {
   width: 106px;
   height: 60px;
   fill: var(--customers-border);
-  transition:
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition:    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customer-link:hover {
@@ -755,7 +750,6 @@ li {
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--main-font-color);
-
 }
 
 .p-portfolio {
@@ -776,7 +770,11 @@ li {
 .portfolio-card {
   width: 370px;
   background-color: var(--white-color);
-
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow:
+        0px 3px 1px rgba(0, 0, 0, 0.1),
+        0px 1px 2px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-card-img-size {
@@ -789,9 +787,9 @@ li {
 
 .card-shadow:hover {
   box-shadow:
-    0px 3px 1px rgba(0, 0, 0, 0.1),
-    0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+    2px 3px 1px rgba(0, 0, 0, 0.1),
+    -2px 3px 2px rgba(0, 0, 0, 0.08),
+    0px 3px 2px rgba(0, 0, 0, 0.12);
 }
 
 .card-shadow:focus {
@@ -801,7 +799,6 @@ li {
     0px 2px 2px rgba(0, 0, 0, 0.12);
   outline: none;
 }
-
 .card-description {
   background-color: var(--white-color);
   padding: 24px 20px;
@@ -813,7 +810,6 @@ li {
 .porfolio-description {
   position: relative;
   overflow: hidden;
-  
 }
 
 .site-description {
@@ -831,7 +827,6 @@ li {
   line-height: 1.56;
   letter-spacing: 0.03em;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
 }
 
 .portfolio-card:focus .site-description {
@@ -840,4 +835,10 @@ li {
 
 .portfolio-card:hover .site-description {
   transform: translateY(0);
+}
+.portfolio-card:hover{
+  box-shadow:
+      0px 3px 1px rgba(0, 0, 0, 0.1),
+      0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
 }
