--- a/css/styles.css
+++ b/css/styles.css
@@ -771,10 +771,7 @@ li {
   width: 370px;
   background-color: var(--white-color);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    box-shadow:
-        0px 3px 1px rgba(0, 0, 0, 0.1),
-        0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
+
 }
 
 .portfolio-card-img-size {
@@ -841,4 +838,10 @@ li {
       0px 3px 1px rgba(0, 0, 0, 0.1),
       0px 1px 2px rgba(0, 0, 0, 0.08),
       0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+.portfolio-card:focus {
+  box-shadow:
+    0px 3px 1px rgba(0, 0, 0, 0.1),
+    0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
